Refactor : mockito, stream() 관련 수정(S10P31A602-285)